doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_40\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Ricky\Documents\GitHub\snowboarding
-d
C:\Users\Ricky\Documents\GitHub\snowboarding\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java
<---- end of javadoc command ---->
Loading source file C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java...
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:21: error: not a statement
        for(int i = getY(); i--; i > getY()-20) {
                                   ^
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:22: error: ')' expected
            if (getOneIntersectingObject(Snowman.class
                                                      ^
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:25: error: illegal start of expression
    }
    ^
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:25: error: ';' expected
    }
     ^
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:26: error: reached end of file while parsing
}
 ^
C:\Users\Ricky\Documents\GitHub\snowboarding\Bullet.java:27: error: reached end of file while parsing
6 errors
